deployment/webhook-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook-server
  namespace: default
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: webhook-api
  selector:
    app: webhook-server
  type: ClusterIP
