deployment/webhook-server-admission.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: webhook-server
webhooks:
- name: webhook-server.kube-system.svc
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUN5RENDQWJDZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRFNU1EVXhNVEUyTkRJd01sb1hEVEk1TURVd09ERTJOREl3TWxvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBS3crClZFR29YeWFxVGFncWJiZHJYN3ZMTFQ4ZmMwbFQ4a01hUXNlZldmUWxrVHVkZm91czhYYzUxdVh4eU1vbm5aSUQKZXpWK3FiWmlXL0JVdy9mSUU2Q3k5L296S3FBcHRvT2R3Y0MrYnNpL3V0clovUDFuVFU1OXRtUTN2TTh2SFEzZwpmd0FUYlVMYzRKM2 [...]
    service:
      name: webhook-server
      namespace: kube-system
      path: /mutate
  timeoutSeconds: 30
  failurePolicy: Ignore
  namespaceSelector:
    matchExpressions:
    - key: role
      operator: NotIn 
      values: ["system"]
  rules:
  - apiGroups: [""]
    apiVersions: ["v1"]
    operations: ["CREATE", "UPDATE"] 
    resources: ["pods"]
    scope: Namespaced
